# Deadline-Room

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
band-once/: BAND_API_FIELD_GUIDE.md  LICENSE  README.md  pyproject.toml
band-once/band_once/: __init__.py  fake_band.py  ledger.py  proof.py  retry.py  shell.py  verify.py
band-once/examples/: echo_agent.py
band-once/tests/: test_exactly_once.py  test_proof_and_shell.py  test_standalone_imports.py
contrib/: codeband-pr-2.md  codeband-pr.md
deploy/: README.md
docs/: FORMAL-SPEC.md  reference-deployment.md
floor/: assertion.py  attestation.py  casefile.py  challenge_adjudicate.py  challenger.py  citation_check.py  claims.py  completeness.py  consistency.py  controls.py  controls.yaml  deficiency.py  determination.py  drafter.py  egress_attestation.py  eval_stats.py  exports_edgar.py  exports_misp.py  exports_oscal.py  exports_stix.py  fact_record.py  formats.py  grounding.py  high_risk.py  idp.py  ingest_ocsf.py  investigate.py  lead_authority.py  legal_hold.py  live_clock.py  margin.py  materiality.py  model_fallback.py  negotiation_envelope.py  packet.py  policy_version.py  portfolio.py  privilege.py  rag.py  rationale.py  (+18 more)
infra/: README.md  kms.tf  outputs.tf  secrets.tf  service.tf  storage.tf  variables.tf  versions.tf
monitoring/: README.md  alerts.yml  grafana-dashboard.json  prometheus.yml
runlogs/: nis2_drafter.jsonl  warden.jsonl
scripts/: _build_eval_caches.py  _env.py  attest_portfolio.py  audit_run.py  build_casefile.py  build_corpus.py  citation_check.py  completeness_sheet.py  consistency_sheet.py  control_register.py  deadline_pressure.py  drill_manifest.py  eval_regression.py  exactly_once_benchmark.py  explain_audit.py  failure_fuzz_benchmark.py  grounding_report.py  hygiene_gate.py  make_cover.py  make_voiceover.py  materiality_eval.py  misp_export.py  model_check.py  model_leaderboard.py  open_vs_closed.py  oscal_export.py  portability_check.py  resign_captures.py  sign_assertions.py  sod_matrix.py  stix_export.py  tamper_sweep.py  tamper_test.py  verify_assertion.py  verify_casefile.py  verify_edgar.py  verify_egress.py  verify_intoto.py  verify_signature.py  verify_submission.py  (+3 more)
service/: __init__.py  app.py  cli.py  corpus.py  worker.py
shell/: band_agent_shell.py
slides/: DECK.md
spikes/: _env.py  band_spikes.py  partner_api_spike.py
tests/: conftest.py  strategies.py  test_affected_party.py  test_amendment_cycle.py  test_amendment_floor.py  test_assertion.py  test_audit_run.py  test_band_shell.py  test_calibration.py  test_casefile.py  test_chain.py  test_challenger.py  test_claims.py  test_clock_boundaries.py  test_completeness.py  test_concurrent_incidents.py  test_confidence.py  test_connectors.py  test_consistency.py  test_controls.py  test_corpus.py  test_custody.py  test_deficiency.py  test_deploy_smoke.py  test_determination_record.py  test_drill.py  test_egress_attestation.py  test_eval_regression.py  test_eval_stats.py  test_exactly_once.py  test_exactly_once_fuzz.py  test_exports_edgar.py  test_exports_misp.py  test_exports_oscal.py  test_exports_stix.py  test_failover.py  test_failure_fuzz.py  test_filing_formats.py  test_floor_orchestration.py  test_full_floor.py  (+63 more)
warden/: chain.py  clocks.py  counterfactual_signing.py  custody.py  determination.py  diff.py  fake_band.py  high_risk.py  intoto.py  ledger.py  legal_hold.py  liveness.py  logcheck.py  materiality.py  modelcheck.py  negotiation.py  obligations.py  portfolio_signing.py  release_gate.py  replay.py  reportability.py  second_opinion.py  signing.py  simulate.py  state_machine.py  timestamp.py
web/: README.md  app.js  app_server.py  approve.html  approve.js  capture_scenarios.py  capture_submit.py  index.html  styles.css
(+78 files in other folders)
