[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "band-once"
version = "0.1.1"
description = "Exactly-once lifecycle shell for Band agents, with a runnable proof and a public conformance check."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Yashash S S" }]
keywords = ["band", "agents", "exactly-once", "idempotency", "lifecycle"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://app.band.ai"
Repository = "https://github.com/Yashash4/Deadline-Room"

[project.scripts]
band-once-proof = "band_once.proof:cli"

[tool.setuptools]
packages = ["band_once"]
